src/objects/TR1__ClosingReportSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>TR1__ClosingReportField__c</fullName>
        <label>ClosingReportField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__DefaultValue__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__JobField__c</fullName>
        <label>JobField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ClosingReport Auto Fields</label>
</CustomObject>